--- a/FrontendCollaboration/WebContent/views/Home.html
+++ b/FrontendCollaboration/WebContent/views/Home.html
@@ -27,7 +27,7 @@ body
 			<div class="row main">
 				<div class="panel-heading">
 	               <div class="panel-title text-center">
-				<h2  style="text-align: center; color: blue"><font face="Algerian"><h1><b><strong>About Us</strong></b></h1></font></h2>
+				<h2  style="text-align: center; color: blue"><font face="Algerian"><h1><b><strong>Collaboration</strong></b></h1></font></h2>
 	               <div	style="color:black; box-shadow: 5px 5px 5px #000;" ></div>
 	               		<hr />
 	               	</div>
