--- a/FrontendCollaboration/WebContent/views/Registration.html
+++ b/FrontendCollaboration/WebContent/views/Registration.html
@@ -64,7 +64,7 @@ Enter Username:
 Enter Password:
 <div class="input-group">
 <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-<input type="password" ng-model="user.password" placeholder="Enter Your Password" class="form-control">
+<input type="password" ng-model="user.password" placeholder="password more than 6 letters" class="form-control">
 </div></div>
 
 <div class="form-group">
@@ -92,7 +92,7 @@ Enter Email:
 Enter PhoneNumber:
 <div class="input-group">
 <span class="input-group-addon"><i class="fa fa-phone fa" aria-hidden="true"></i></span>
-<input type="text" ng-model="user.phone" placeholder="Enter Your Phone" class="form-control">
+<input type="text" ng-model="user.phone" placeholder="phone no begin 9,8,7 digits" class="form-control">
 </div></div>
 <div class="form-group">
 <center><h4><strong>Select Role:</strong></h4></center>
